# sol-lens-desk

./: .env.example  .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  FEATURE_INVENTORY.md  FILTER.md  PET.md  PLAN.md  PORTFOLIO_TRADE.md  PRD.md  SCORING.md  SIGNAL_RESEARCH.md  TECH_DECISIONS.md  THIRD_PARTY_SERVICES.md  USER_FEATURES.md
plan/: 00-overview.md  01-project-setup.md  02-privy-integration.md  03-token-detector.md  04-token-feed-ui.md  05-token-enricher.md  06-trade-flow.md  07-portfolio.md  08-settings-ux.md  09-foundation.md  10-filter.md  11-portfolio.md  12-pet.md  13-redesign.md  14-chart.md  15-ui-hierarchy.md  16-security-bugfix.md  17-code-quality-dca.md  18-enricher-retry-rpc-config.md  19-pumpfun-direct-trade.md  20-graduation-price-fallback.md  21-pet-emotion-sync.md  22-pet-sync-revised.md  23-multi-wallet-vault.md  data-flow.md
scripts/: smoke.mjs
shared/: constants.ts  design-tokens.css  package.json  types.ts  utils.ts
src/: App.tsx  constants.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  enricher.rs  lib.rs  main.rs  price_tracker.rs  rpc.rs  wallet.rs
src-tauri/src/commands/: detector.rs  history.rs  mod.rs  pet.rs  positions.rs  price_tracking.rs  pumpfun_direct.rs  sell.rs  swap.rs  tokens.rs  trade.rs
src-tauri/src/detector/: mod.rs  pipeline.rs  pumpportal.rs
src/hooks/: useHandleSell.ts  usePetTradeBridge.ts  usePricePoll.ts  (+2 more)
(+41 files in other folders)
