[package]
name = "sol-lens-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "macos-private-api"] }
tauri-plugin-store = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
solana-client = "2"
solana-sdk = "2"
solana-transaction-status = "2"
bs58 = "0.5"
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
base64 = "0.22"
bincode = "1"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

[features]
default = []
